More installer tweaks.